<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/relax_gif_4"
        />


    <TextView
        android:id="@+id/txt_helpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#B2FFFFFF"
        android:text="@string/team_honeydew"
        android:textColor="#A80303"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarHelp"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/developer_name"
        android:layout_width="368dp"
        android:layout_height="179dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="14dp"
        android:background="#B2FFFFFF"
        android:text="@string/developer_name"
        android:textColor="#B1070C"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_helpTitle" />

    <TextView
        android:id="@+id/txt_citations"
        android:layout_width="0dp"
        android:layout_height="357dp"
        android:layout_marginBottom="16dp"
        android:background="#B2FFFFFF"
        android:text="@string/citations"
        android:textColor="#5D0E7A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/developer_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/developer_name"
        app:layout_constraintTop_toBottomOf="@+id/developer_name"
        app:layout_constraintVertical_bias="0.557" />

</androidx.constraintlayout.widget.ConstraintLayout>
