<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:layout_gravity="center"
    >

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="5dp"
        android:background="@color/Gray"
        android:alpha="0.9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/childIdPhoto"
                android:layout_width="205dp"
                android:layout_height="189dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                app:srcCompat="?attr/selectableItemBackgroundBorderless" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="61dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/make_your_choice"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textChildName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp"
                android:textStyle="bold" />



        </LinearLayout>

        <LinearLayout
            android:baselineAligned="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:layout_marginTop="15dp"
                    android:background="@drawable/button_style"
                    android:id="@+id/buttonHeads"
                    android:alpha="0.9"
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/heads"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:layout_marginTop="15dp"
                    android:background="@drawable/button_style"
                    android:id="@+id/buttonTails"
                    android:alpha="0.9"
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/tails"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="24sp" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
